# pipster

./: .gitignore  AUTHORS.txt  LICENSE  README.md  cli_options.md  install_cli_options.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build_wheels.yml  test_build_publish.yml
pip_inside/: __init__.py
scripts/: pre-commit
src/pip_inside/: __init__.py  autoinstall.py  install.py
src/pipster/: __init__.py  _formatter.py  _version.py  autoinstall.py  freeze.py  install.py  utils.py
src/pipster/_experimental/: autoinstall.py  install_if_not_found.py
tests/data/: constraints.txt  imports.py  other-requirements.txt  pip_install_help_with_python_kwargs.txt  requirements.txt
tests/functional/: test_autoinstall.py  test_formatter.py  test_install.py
