[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "pip_inside"
dynamic = ["version", "urls"]
description = "pip install from inside your scripts"
readme = "README.md"
authors = [
	{ name = "Robert Reynolds", email = "robert_reynolds@byu.edu" },
]
license = { file = "LICENSE" }
requires_python = ">=3.8"
dependencies = [
	"pip",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]


[project.optional-dependencies]
test = [
  "pytest >=6.0",
  "pytest-cov >=4.0",
]


[tool.hatch.version]
source = "vcs"


[tool.hatch.build.hooks.vcs]
version-file = "src/pip_inside/_version.py"


[tool.hatch.metadata.hooks.vcs.urls]
Homepage = "https://github.com/reynoldsnlp/pip_inside"
"Bug Tracker" = "https://github.com/reynoldsnlp/pip_inside/issues"
source_archive = "https://github.com/reynoldsnlp/pip_inside/archive/{commit_hash}.zip"


[tool.pytest]
python_files = "tests/functional/*.py"


[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = [
  "src"
]
addopts = "-ra -q"
testpaths = [
    "tests",
]
