[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pipster"
dynamic = ["version"]
description = "pip install from inside your scripts"
readme = "README.md"
authors = [
	{ name = "Robert Reynolds", email = "robert_reynolds@byu.edu" },
]
license = { file = "LICENSE" }
requires_python = ">=3.8"
dependencies = [
	"pip",
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/reynoldsnlp/pipster"
"Bug Tracker" = "https://github.com/reynoldsnlp/pipster/issues"


[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "pytest >=6.0",
  "pytest-cov >=4.0",
  "ruff",
]
lint = [
  "black",
  "mypy",
  "ruff",
]
test = [
  "pytest >=6.0",
  "pytest-cov >=4.0",
]


[tool.hatch.version]
path = "src/pipster/_version.py"


[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
explicit_package_bases = true


[tool.pytest]
python_files = "tests/functional/*.py"


[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = [
  "src"
]
addopts = "-ra -q --ignore=tests/data"
testpaths = [
    "tests",
]
