[metadata]
name = pip_inside
version = attr: pip_inside.__version__
description = pip install from inside the interpreter.
long_description = file: README.md
author = Robert Reynolds
author_email = ReynoldsRJR@gmail.com
url = https://github.com/reynoldsnlp/pip_inside
license = GPL-3
classifiers =
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: OS Independent',

[options]
install_requires =
    pip
package_dir =
    = src
packages = find:
requires_python = ">=3.7"

[options.packages.find]
where = src

[aliases]
test = pytest

[tool:pytest]
python_files = tests/functional/*.py
